Lets get this thing going

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,42 +4,27 @@ html
     title Mikko
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
-    link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css")
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css")
   body
-    .container
-      .jumbotron
+    section.section
+      .container
         form
-          .form-group
+          .field#field-voice
             label(for="voice") Voice
-            select#voice.form-control
-              each voice in voices
-                option(value=voice)= voice[0].toUpperCase() + voice.substring(1)
-          .form-group
-            label(for="text") Text
-            input#text.form-control(autofocus)
-          button.btn.btn-lg.btn-block.btn-success Send
-    script.
-      window.addEventListener('DOMContentLoaded', () => {
-        const form = document.querySelector('form');
-        const voiceInput = document.querySelector('#voice');
-        const textInput = document.querySelector('#text');
-        const isBlank = RegExp.prototype.test.bind(/^\s*$/);
-
-        form.addEventListener('submit', ev => {
-          const voice = voiceInput.value;
-          const text = textInput.value;
-
-          ev.preventDefault();
-          if ([voice, text].find(isBlank) == null) {
-            fetch(window.location, {
-              method: 'POST',
-              body: JSON.stringify({ voice, text }),
-              headers: {
-                'Content-Type': 'application/json'
-              }
-            });
-          }
-          textInput.value = '';
-          textInput.focus();
-        });
-      });
+            .control
+              .select
+                select#voice
+                  each voice in voices
+                    option(value=voice)= voice[0].toUpperCase() + voice.substring(1)
+          .field
+            label#label-text(for="text") Text
+            .control
+              input#text.input(type="text", autofocus)
+          .field
+            .control
+              button.button(type="submit") Send
+    section#log.section
+      nav.panel
+    script(src="//momentjs.com/downloads/moment.min.js")
+    script(src="/socket.io/socket.io.js")
+    script(src="/app.js")
